# aperture

./: .gitignore  ALGEBRAIC_ENVIRONMENTS.md  ALGEBRAIC_EXPRESSIONS.md  APPLICATIONS.md  CLAUDE.md  CLOSURES_AND_APERTURES.md  CMakeLists.txt  CRITICAL_REVIEW.md  Doxyfile.custom  ENVIRONMENTS.md  EXPERIMENTAL_RESULTS.md  GENERIC_PROGRAMMING.md  README.md  SPEC.md  TECHNICAL_REPORT.md  _config.yml  aperture.cpp  aperture.hpp  benchmarks  benchmarks.cpp  demo  demo.cpp  depth_analysis.csv  examples.md  fluent_api.hpp  fluent_demo.cpp  go.mod  integration_tests.cpp  plot_results.py  plugin_demo.cpp  secure_computation_demo.cpp  security.md  simple_fluent_demo.cpp  test_framework.hpp  unit_tests.cpp  validate_tests.py
.github/workflows/: docs.yml
.papermill/: state.md
.papermill/reviews/2026-03-14/: citation-verifier.md  format-validator.md  literature-context.md  logic-checker.md  methodology-auditor.md  novelty-assessor.md  prose-auditor.md  review.md
aperture_detail_old/: evn.hpp  exp.hpp  lambda.hpp  prim.hpp  symbol.hpp
api/: aperture.tag
api/html/: annotated.html  annotated_dup.js  classes.html  dir_37ebe734f0a2ec953cef4f19bd1a0c66.html  dir_37ebe734f0a2ec953cef4f19bd1a0c66_dep.map  dir_37ebe734f0a2ec953cef4f19bd1a0c66_dep.md5  dir_390463bf31f680e7a9f58c3cf16da08e.html  dir_390463bf31f680e7a9f58c3cf16da08e.js  dir_390463bf31f680e7a9f58c3cf16da08e_dep.map  dir_390463bf31f680e7a9f58c3cf16da08e_dep.md5  dir_84287fa28ad63517430bce9998aa5d62.html  dir_84287fa28ad63517430bce9998aa5d62.js  dir_84287fa28ad63517430bce9998aa5d62_dep.map  dir_84287fa28ad63517430bce9998aa5d62_dep.md5  dir_94a30a8e6188cddde37bc1c5a98fcc53.html  dir_94a30a8e6188cddde37bc1c5a98fcc53.js  dir_b4091bf290e7821edf4cbc05fe67a61a.html  dir_b4091bf290e7821edf4cbc05fe67a61a.js  dir_b4091bf290e7821edf4cbc05fe67a61a_dep.map  dir_b4091bf290e7821edf4cbc05fe67a61a_dep.md5  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  functions_vars.html  graph_legend.html  hierarchy.html  hierarchy.js  index.html  index.js  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_5.map  inherit_graph_6.map  (+11 more)
api/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_4.js  classes_6.js  files_0.js  files_1.js  files_2.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_6.js  functions_8.js  functions_a.js  functions_d.js  functions_e.js  functions_f.js  namespaces_1.js  pages_0.js  pages_1.js  (+12 more)
api/xml/: Doxyfile.xml  dir_37ebe734f0a2ec953cef4f19bd1a0c66.xml  dir_390463bf31f680e7a9f58c3cf16da08e.xml  dir_84287fa28ad63517430bce9998aa5d62.xml  dir_94a30a8e6188cddde37bc1c5a98fcc53.xml  dir_b4091bf290e7821edf4cbc05fe67a61a.xml  index.xml  indexpage.xml
docs/: DESIGN.md  getting-started.md  index.md
docs/api/: aperture.tag
examples/: basic.apt
include/aperture/: aperture.hpp  aperture_exp.hpp  exp.hpp  s.cpp  test.hpp
lambda/: addition.cpp  addition.h  closure.h  expression.hpp  multiplication.h  scheme++.h  types.cpp  types.h  value.hpp
lambda3/: binary_fn.hpp  closure.cpp  driver.cpp  expression.hpp  lambda.h  num.hpp  parser.h  str.hpp  var.hpp
paper/: ARXIV_SUBMISSION.md  README.md  aperture.aux  aperture.bbl  aperture.blg  aperture.tex  references.bib
paper/workshop/: WORKSHOP_PAPER_SUMMARY.md  apertures-workshop.tex  references-workshop.bib
pkg/ast/: ast.go
pkg/env/: env.go
pkg/eval/: eval.go  eval_test.go  partial.go  simplify.go
pkg/parser/: parser.go
pkg/serialize/: serialize.go
pkg/trace/: trace.go
pkg/value/: value.go
plugins/: llm_plugin.hpp
secure/plugins/: plugin_interface.hpp
test/: aperture_test.cpp  pretty_printer.cpp  test.cpp  test3.cpp
tests/: CMakeLists.txt  test_arithmetic.cpp  test_complex_programs.cpp  test_conditionals.cpp  test_error_handling.cpp  test_integration.cpp  test_lambda.cpp  test_let_bindings.cpp  test_partial_eval.cpp  test_performance.cpp  test_security.cpp  test_special_forms.cpp
(+358 files in other folders)
